--- a/style/style.css
+++ b/style/style.css
@@ -263,6 +263,7 @@ input::placeholder {
     outline: none;
     margin-bottom: 10px;
     padding-left: 20px;
+    color:white;
 }
 
 .button1 input{
